--- a/style.css
+++ b/style.css
@@ -119,7 +119,38 @@ aside .list a {
     color: white;
 }
 
+aside .title {
+    align-items: center;
+    justify-content: space-between;
+}
+
 /* --------- Home --------- */
+
+main .title {
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .profile {
+    padding: 0;
+    border: none;
+    background: none;
+}
+
+main .profile img {
+    object-fit: cover;
+    border-radius: 50%;
+    max-width: 30px;
+}
+
+main .profile img:hover {
+    max-width: 31px;
+    cursor: pointer;
+}
+
+main .profile img:active {
+    filter: brightness(80%);
+}
 
 .recents {
     padding-top: 10px;
